--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-  - source: /tmp/codigo
-    destination: /opt/tomcat
+  - source: /build/libs/HolaMundo.war
+    destination: /opt/tomcat/webapps/
 hooks:
   ApplicationStop:
     - location: codedeploy-scripts/stop.sh
