--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,75 +1,24 @@
-name: Crear y desplegar aplicacion en java
+name: Pruebas
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
-  build:
-
-    runs-on: ubuntu-20.04
-    permissions:
-      contents: read
+  test:
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Configurar JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-
-  # Configura el caché de Gradle.
-    - name: Establece Gradle
-      uses: gradle/actions/setup-gradle@v3
-
-    - name: Otorga permisos de ejecucion a gradlew
-      run: chmod +x gradlew
-    - name: Ejecuta con gradlew
-      run: ./gradlew build
-
-    
-  testing:
-
-    runs-on: ubuntu-20.04
-    permissions:
-      contents: read
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Configurar JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    # Configura el caché de Gradle.
-    - name: Establece Gradle
-      uses: gradle/actions/setup-gradle@v3
-
-    - name: Otorga permisos de ejecucion a gradlew
-      run: chmod +x gradlew
-    - name: Ejecuta con gradlew
-      run: ./gradlew test
-
-
-  dependency-submission:
-    runs-on: ubuntu-20.04
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Configurar JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    # Configura el caché de Gradle.
-    - name: Generar y enviar gráfico de dependencia
-      uses: gradle/actions/dependency-submission@v3
+      - uses: actions/checkout@v2
+      - name: Configurar JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Configurar gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Otorgar permisos de ejecución a gradle
+        run: chmod +x gradlew
+      - name: Ejecutar test con gradle
+        run: ./gradlew test
